# picdrop-desktop

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
scripts/: sync-github-page.ps1  tauri-android.ps1  tauri-desktop.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
