[package]
name = "picdrop"
version = "1.0.0"
description = "PicDrop desktop and mobile app"
authors = ["Jeremy"]
edition = "2021"

[lib]
name = "picdrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
